# Kagami-CUDA-Operator

./: README.md
sgemm/: CMakeLists.txt  README.md  run.sh  sgemm  sgemm.cu  utils.cu  utils.cuh
sgemm/src/: kernel.cuh  sgemm_v1.cuh  sgemm_v2.cuh  sgemm_v3.cuh  sgemm_v4.cuh  sgemm_v5.cuh  sgemm_v6.cuh
